--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@ header{
     border-radius: 50%;    
 }
 
+.extra img{
+    position: relative;
+    left: 50px;
+    top: -25px;
+}
+
 .social-media{
     position: absolute;
     right: 510px;
@@ -68,18 +74,19 @@ header{
 
 .social-media img{
 
-    display: block;
+    display: block; /*alinhar abaixo */
     padding: 15px;
     margin: 5px 0;
 }
 
 .text-about{
-    margin-top: 20px;
+    margin-top: -20px;
     margin-left: 80px;
 }
 .text-about > h1{
-    font-size: 50px;
-    font-weight:400
+    font-size: 60px;
+    font-weight:400;
+    line-height:140%;
 }
 
 .text-about > p{
@@ -100,4 +107,12 @@ header{
     cursor: pointer;
     outline: none;
     border: none
+}
+
+#bucks {
+    color: #276a3e;
+    font-size: 90px;
+    font-weight: bold;
+
+    /* # para id mas só span serveria*/
 }
